--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
     flex-direction: column;
     height: 100%;
     background-image: url("../Assets/imgs/background.png");
+    background-size: cover;
 }
 
 
@@ -33,8 +34,9 @@ body{
     display: flex;
     justify-content: center;
     position: fixed;
-    width: 100%;
+    margin: 0 auto;
     flex-wrap: wrap;
+    width: 100%;
 }
     .header{
         width: 60%;
@@ -204,3 +206,109 @@ justify-content: center;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     
 }
+
+.titulo-formulario{
+    text-align: center;
+    margin-top: 60px;
+    background-color: rgb(28, 29, 29);
+    border: 1px solid #000000;
+    padding: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
+    color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+    .titulo-formulario h2{
+        font-size: 50px;
+        margin-bottom: 20px;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+    }
+
+    .titulo-formulario em{
+        font-size: 30px;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+.formulario-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid rgb(34, 33, 34);
+    border-radius: 3px;
+    margin-top: 2rem;
+    padding-top: 10px;
+    background-color: rgb(33, 37, 41);
+
+    color: aliceblue;
+    font-size: 30px;
+    line-height: 1.3;
+    flex-wrap: wrap;
+    margin-bottom: 2rem;
+
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.form-linea{
+    margin-bottom: 40px;
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 80%;
+}
+    .form-linea input[type = "text"],
+    .form-linea input[type = "email"]{
+        background-color: #fff;
+        border: 1px solid rgb(0, 0, 0);
+        border-radius: 3px;
+        width: 100%;
+        padding: 7px;
+        font-size: 14px;
+    }
+        .form-linea label{
+            margin-bottom: 15px;
+        }
+            .form-linea textarea{
+                display: flex;
+                flex-wrap: wrap;
+                font-size: 14px;
+                border: 1px solid rgb(48, 46, 48);
+                border-radius: 3px;
+                margin-bottom: 10px;
+                padding: 0.5rem;
+                min-height: 200px;
+                min-width: 50px;
+                resize: none;
+            }
+            
+            .form-boton{
+                margin-top: 2rem;
+                display: flex;
+                justify-content: center;
+                flex-wrap: wrap;
+            }
+
+                .form-boton button {
+                    color: rgb(252, 252, 252);
+                    font-weight: bold;
+                    color: #fff;
+                    background-color: #303130;
+                    border: none;
+                    border-radius: 3px;
+                    padding: 20px 40px;
+                    cursor: pointer;
+                    font-size: 20px;
+                }
+                    .form-linea button:hover{
+                        background-color: #686b68;
+                    }
+                    .form-linea button:active{
+                        background-color: #303130;
+                    }
