--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,9 @@ body{
     font-size: 30px;
 }
     .logo:hover{
-        background-color: brown;
+        background-color: #c35831;
         border-radius: 100px;
+        transition: 1s;
     }
 
 .header-container{
@@ -49,14 +50,51 @@ body{
             text-decoration: none;
             color: aliceblue;
             padding: 10px 20px;
-            font-size: 30px;
             line-height: normal;
             flex-wrap: wrap;
+            padding: .5em .8em;
+            color: rgba(255, 255, 255, 0.993);
+            position: relative;
+            text-decoration: none;
+            font-size: 30px;
         }
-            header nav a:hover{
-                background-color: brown;
-                border-radius: 100px;
+            header nav a::before,
+            header nav a::after {
+            content: '';
+            height: 14px;
+            width: 14px;
+            position: absolute;
+            transition: all .35s ease;
+            opacity: 0;
             }
+        
+                header nav a::before {
+                content: '';
+                right: 0;
+                top: 0;
+                border-top: 3px solid #c35831;
+                border-right: 3px solid #c35831;
+                transform: translate(-100%, 50%);
+                }
+        
+                    header nav a:after {
+                        content: '';
+                        left: 0;
+                        bottom: 0;
+                        border-bottom: 3px solid #c35831;
+                        border-left: 3px solid #c35831;
+                        transform: translate(100%, -50%)
+                    }
+        
+                        header nav a:hover:before,
+                        header nav a:hover:after{
+                        transform: translate(0,0);
+                        opacity: 1;
+                        }
+        
+                                header nav a:hover {
+                                color: #c35831;
+                                }   
 
 .titulo{
     text-align: center;
@@ -138,13 +176,19 @@ main{
     background-color: rgb(33, 37, 41);
     padding: 20px 0;
     flex: 0 0 auto;
+}                       
+.logo-foot{                        
+    display: flex;                          
+    justify-content: center;                         
+    color: aliceblue;
+    padding: 10px 20px;
+    font-size: 30px;                        
 }
     .footer{
         display: flex;
         justify-content: center;
     }
             footer nav a{
-                
                 text-decoration: none;
                 color: aliceblue;
                 padding: 10px 20px;
@@ -152,16 +196,12 @@ main{
                 line-height: normal; 
             }
                 footer nav a:hover{
-                background-color: brown;
+                background-color: #c35831;
                 border-radius: 100px;
+                text-decoration: none;
+                color: aliceblue;
+                transition: 1s;
                     }
-                        .logo-foot{
-                            display: flex;
-                            justify-content: center;
-                            color: aliceblue;
-                            padding: 10px 20px;
-                            font-size: 30px;
-                            }
 
 .photo-grid-container{
 display: flex;
