--- a/sass/base/_titulosylogos.scss
+++ b/sass/base/_titulosylogos.scss
@@ -1,35 +1,20 @@
+@import 'mixins';
+
 .titulo{
-    text-align: center;
-    padding-top: 10rem;
-    color: aliceblue;
-    font-size: 2rem;
-    line-height: normal;
-    text-decoration-style: dotted;
-    font-family: cursive;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
+    @include titulo;
 }
     .titulo2{
-        font-size: 4rem;
+        @include titulo2;
     }
         .subtitulo{
-            text-align: left;
-            color: aliceblue;
-            font-size: 2rem;
-            line-height: normal;
-            text-decoration-style: dotted;
-            font-family: cursive;
-            margin-bottom: 2rem;
+            @include subtitulo;
         }
             .subtitulo2{
                 text-align: center;
             }
 
 .titulo-img{
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
+    @include tituloimg;
 }
     .titulo-img img{
         display: flex;
@@ -108,13 +93,7 @@
             }
         
     .links{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-        margin-bottom: 4rem;
-        font-size: 4rem;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        
+        @include links;
     }
     
     .titulo-formulario{
