--- a/sass/style.scss
+++ b/sass/style.scss
@@ -16,6 +16,7 @@ body{
 }
 
 @import 'base/header';
+@import 'base/mixins';
 @import 'base/titulosylogos';
 @import 'base/footer';
 @import 'components/mediaQuery';
